src/test/ui/lifetime-errors/ex3-both-anon-regions-2.nll.stderr
warning: not reporting region error due to nll
  --> $DIR/ex3-both-anon-regions-2.rs:12:10
   |
LL |     *v = x; //~ ERROR lifetime mismatch
   |          ^

error[E0623]: lifetime mismatch
  --> $DIR/ex3-both-anon-regions-2.rs:11:14
   |
LL | fn foo(&mut (ref mut v, w): &mut (&u8, &u8), x: &u8) {
   |              ^^^^^^^^^            ---           --- these two types are declared with different lifetimes...
   |              |
   |              ...but data from `x` flows here

error: aborting due to previous error

For more information about this error, try `rustc --explain E0623`.
